SERVER-12902 disallow queries with projections for id hack